# get-asset-values

./: call_api.http  get_asset_values.cwl  pyproject.toml  requirements-dev.txt
docs/: call_api.http  deploy.http  toil_input.yaml  toil_input_kerchunk.yaml  uk_points.geojson  workflow_input_geodowd.json  workflow_input_london.json  workflow_input_s3.json  world_points.geojson
src/: Dockerfile  main.py
src/app/: create_dataarray.py  create_response.py  extra.py  get_values.py  get_values_logger.py  load_cogs.py  load_images.py  load_points.py  local_api.py  main.py  points_data.py  requirements.txt  search_stac.py  stac_parsing.py
src/app/api/: lambda_handler.py  local_api.py
src/app/stac_code/: create_stac.py  search_stac.py  stac_items.py  stac_parsing.py
src/tests/: test_create_stac.py  test_resources.py  test_search_stac.py  test_stac_parsing.py
