[project]
name = "LST_Workflow"
version = "0.1.0"
description = "Getting values from cog files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.8",
    "boto3>=1.35.40",
    "cwltool==3.1.20240112164112",
    "fastapi>=0.115.2",
    "fsspec>=2024.9.0",
    "ipykernel>=6.29.5",
    "kerchunk>=0.2.7",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pystac>=1.11.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "rioxarray>=0.18.1",
    "ruff>=0.6.9",
    "s3fs>=0.4.2",
    "shapely>=2.0.6",
    "shortuuid>=1.0.13",
    "toil>=6.1.0",
    "uvicorn>=0.31.1",
    "xarray==2024.11.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 80


[tool.ruff.lint]
extend-select=[]
select = ["D103","E","F", "UP", "B","SIM","I",]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
